chore: build jdk tool.jar ziptree into common-validation jar